--- a/myproject/templates/home.html
+++ b/myproject/templates/home.html
@@ -1,16 +1,11 @@
-<!DOCTYPE html>
-{% load static %}
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
-    <link rel="stylesheet" href="{% static 'css/style.css' %}" />
-    <script src="{% static 'js/main.js' %}" defer></script>
-  </head>
-  <body>
-    <h1>Home</h1>
+{% extends 'layout.html' %} 
+
+{% block title %} 
+    Home 
+{% endblock %} 
+
+{% block content %}
     <p>Welcome to my home page</p>
     <p>Check out my <a href="/about">About</a> page</p>
-  </body>
-</html>
+{% endblock %}
+ 
