--- a/mysite/posts/templates/posts/posts_list.html
+++ b/mysite/posts/templates/posts/posts_list.html
@@ -1,9 +1,22 @@
 {% extends 'layout.html' %}
 
 {% block title %}
-    Posts List
+    Posts
 {% endblock %}
 
 {% block content%} 
-<h1>Posts Lists</h1>
+    <section>
+        <h1>Posts </h1>
+    </section>
+
+    {% for post in posts %}
+        <article class = "post">
+            <h2>{{ post.title }}</h2>
+            <p>{{ post.date }}</p>
+            <p>{{ post.body }}</p>
+            {% comment %} <a href="{% url 'posts:post_detail' post.id %}">Read More</a> {% endcomment %}
+        </article>
+    {% endfor %}
+
+
 {% endblock %}
