--- a/mysite/templates/layout.html
+++ b/mysite/templates/layout.html
@@ -14,9 +14,15 @@
 </head>
 <body>
     <nav>
-        <a href="/">🏠</a> | 
-        <a href="/about">😀</a> | 
-        <a href="/posts">📰</a>
+        <a href="/">
+            <span role="img" aria-label="home">🏠</span>
+        </a> | 
+        <a href="/about">
+            <span role="imag" aria-label="about">😀</span>
+        </a> | 
+        <a href="{% url 'posts:list' %}">
+            <span role="img" aria-label="posts">📝</span>
+        </a>
     </nav>
     <main>
         {% block content %}
