--- a/mysite/static/css/style.css
+++ b/mysite/static/css/style.css
@@ -31,6 +31,12 @@ p {
     text-align: center;
 }
 
+.banner {
+    display: block;
+    width: 100%;
+    max-width: 800px;
+}
+
 a {
     text-decoration: none;
     color: #81dbb8;
