--- a/mysite/static/css/style.css
+++ b/mysite/static/css/style.css
@@ -22,14 +22,25 @@ nav {
 
 main {
     flex-grow: 1;
-    display: grid;
-    place-content: center;
+    
 }
 
-h1,
-p {
-    text-align: center;
+section {
+    display: flex;
+    flex-flow: column;
+    gap: 1rem;
 }
+
+
+h1, h2 {
+    font-size: 2.5rem;
+}
+
+p {
+    font-size: 1rem;
+}
+
+
 
 .banner {
     display: block;
