user registeration form

--- a/mysite/users/templates/users/register.html
+++ b/mysite/users/templates/users/register.html
@@ -6,5 +6,10 @@
 
 {% block content%} 
     <h1>Register a New User</h1>
+    <form action="/users/register/" method="post" class="form-with-validation">
+        {% csrf_token %}
+        {{ form }}
+        <button type="submit" class="form-submit">Submit</button>
+    </form>
 
 {% endblock %}
