--- a/mysite/static/css/style.css
+++ b/mysite/static/css/style.css
@@ -9,8 +9,6 @@ body {
     background-color: black;
     color: whitesmoke;
     font-size: 3rem;
-    display: flex;
-    flex-flow: column;
 }
 
 nav {
@@ -21,8 +19,7 @@ nav {
 }
 
 main {
-    flex-grow: 1;
-    
+    padding: 1rem;
 }
 
 section {
@@ -31,21 +28,13 @@ section {
     gap: 1rem;
 }
 
-
-h1, h2 {
+h1,
+h2 {
     font-size: 2.5rem;
 }
 
 p {
     font-size: 1rem;
-}
-
-
-
-.banner {
-    display: block;
-    width: 100%;
-    max-width: 800px;
 }
 
 a {
@@ -55,4 +44,53 @@ a {
 
 a:hover {
     opacity: .85;
+}
+
+.banner {
+    display: block;
+    width: 100%;
+    max-width: 800px;
+}
+
+.form-with-validation {
+    font-size: 1rem;
+    padding: 1rem;
+    display: flex;
+    flex-flow: column;
+    gap: 1rem;
+}
+
+.form-with-validation div {
+    display: flex;
+    flex-flow: column;
+    gap: 0.5rem;
+}
+
+.form-with-validation input {
+    padding: 0.25rem;
+    max-width: 300px;
+}
+
+.form-submit {
+    padding: 0.5rem;
+    border-radius: 10px;
+    width: 125px;
+}
+
+.helptext {
+    font-size: 1rem;
+    margin-left: 1rem;
+}
+
+.helptext ul {
+    list-style-type: none;
+}
+
+.errorlist {
+    color: #F00;
+    margin-left: 2rem;
+}
+
+.errorlist li::marker {
+    content: '🚨 ';
 }
