--- a/mysite/templates/layout.html
+++ b/mysite/templates/layout.html
@@ -22,6 +22,9 @@
         </a> | 
         <a href="{% url 'posts:list' %}">
             <span role="img" aria-label="posts">📝</span>
+        </a> |
+        <a href="{% url 'users:register' %}">
+            <span role="img" aria-label="posts">🚀</span>
         </a>
     </nav>
     <main>
